# object-vectordb

./: CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  pre-release.yml  release.yml  version-check.yml
benches/: README.md  conftest.py  test_add_get.py  test_batch.py  test_export.py  test_register.py  test_search.py
docs/: README.md  api.md  architecture.md  comparison.md  concepts.md  concurrency.md  filters.md  testing.md
examples/spotlight_youtube_demo/: README.md  query.py  sample_videos.py  seed.py  visualize.py
src/object_store/: __init__.py  arrow_utils.py  backend.py  exceptions.py  registry.py  store.py  types.py
src/object_vectordb/: __init__.py  arrow_utils.py  backend.py  collection.py  db.py  exceptions.py  fusion.py  registry.py  scoring.py  types.py
tests/: conftest.py  test_batch.py  test_collections.py  test_export.py  test_index.py  test_lifecycle.py  test_list.py  test_multiwriter.py  test_persistence.py  test_registry.py  test_registry_migration.py  test_rrf.py  test_schema.py  test_search.py  test_update.py  test_vector_fields.py
