[project]
name = "object-vectordb"
version = "0.1.0"
description = "Multimodal object store on top of LanceDB with registered vector fields and dynamic properties."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "lancedb>=0.30.0",
    "numpy>=1.26",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=5.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/object_vectordb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "full: spec-scale benchmarks (100K+ rows). Opt-in via -m full; excluded from quick runs.",
]

[tool.coverage.run]
source = ["src/object_vectordb"]
branch = true
parallel = false

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "benches"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]
"benches/**" = ["B"]
